# io.github.gtkChess

./: .gitlab-ci.yml  .gitmodules  meson.build  package-lock.json  package.json  tsconfig.json
build-aux/flatpak/: io.github.gtkChess.json
data/: io.github.gtkChess.data.gresource.xml  io.github.gtkChess.desktop.in  io.github.gtkChess.gschema.xml  io.github.gtkChess.metainfo.xml.in  meson.build  styles.css  window.blp  window.ui
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: ActionChain.ts  ChessGame.ts  DragControl.ts  DragSource.ts  DropTarget.ts  EventControl.ts  GameAction.ts  GameBoard.ts  GameInitializer.ts  GameLoop.ts  Piece.ts  PieceControl.ts  PieceFactory.ts  Pieces.ts  Position.ts  Tile.ts  TileSet.ts  UI.ts  io.github.gtkChess.src.gresource.xml  main.ts  meson.build  window.ts
